// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviousNext Business Guide When in a middle article it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous false"
  >
    <h6>
      Previous
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <i
        aria-hidden="true"
        className="fa fa-chevron-left"
      />
      <span>
        Pick your business location
      </span>
    </a>
  </div>
  <div
    className="next false"
  >
    <h6>
      Next
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <span>
        Choose your business name
      </span>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right"
      />
    </a>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the first article of a middle section it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous false"
  >
    <h6>
      Previous
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <i
        aria-hidden="true"
        className="fa fa-chevron-left"
      />
      <span>
        Buy an existing business or franchise
      </span>
    </a>
  </div>
  <div
    className="next false"
  >
    <h6>
      Next
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <span>
        Choose a business structure
      </span>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right"
      />
    </a>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the first article of the first section it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous invisible"
  >
    <h6>
      Previous
    </h6>
  </div>
  <div
    className="next false"
  >
    <h6>
      Next
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <span>
        Write your business plan
      </span>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right"
      />
    </a>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the last article of a middle section it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous false"
  >
    <h6>
      Previous
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <i
        aria-hidden="true"
        className="fa fa-chevron-left"
      />
      <span>
        Open a business bank account
      </span>
    </a>
  </div>
  <div
    className="next false"
  >
    <h6>
      Next
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <span>
        Manage your finances
      </span>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right"
      />
    </a>
  </div>
</div>
`;

exports[`PreviousNext Business Guide When in the last article of the last section it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous false"
  >
    <h6>
      Previous
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <i
        aria-hidden="true"
        className="fa fa-chevron-left"
      />
      <span>
        Native American-owned businesses
      </span>
    </a>
  </div>
  <div
    className="next invisible"
  >
    <h6>
      Next
    </h6>
  </div>
</div>
`;

exports[`PreviousNext For Partners When in a middle article it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous false"
  >
    <h6>
      Previous
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <i
        aria-hidden="true"
        className="fa fa-chevron-left"
      />
      <span>
        Operate as a 7(a) Lender
      </span>
    </a>
  </div>
  <div
    className="next false"
  >
    <h6>
      Next
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <span>
        Training and Courses
      </span>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right"
      />
    </a>
  </div>
</div>
`;

exports[`PreviousNext For Partners When in the first article of a section it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous invisible"
  >
    <h6>
      Previous
    </h6>
  </div>
  <div
    className="next false"
  >
    <h6>
      Next
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <span>
        Operate as a 7(a) Lender
      </span>
      <i
        aria-hidden="true"
        className="fa fa-chevron-right"
      />
    </a>
  </div>
</div>
`;

exports[`PreviousNext For Partners When in the last article of a section it renders properly 1`] = `
<div
  className="previousNext"
  id="previous-next"
>
  <div
    className="previous false"
  >
    <h6>
      Previous
    </h6>
    <a
      className="button"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      <i
        aria-hidden="true"
        className="fa fa-chevron-left"
      />
      <span>
        Training and Courses
      </span>
    </a>
  </div>
  <div
    className="next invisible"
  >
    <h6>
      Next
    </h6>
  </div>
</div>
`;

exports[`PreviousNext Won't render without a lineage 1`] = `"received is not a function"`;
